2005-01-26 Magnus Hagdorn
 * some more minor optimisations to glimmer_temp.f90

2005-01-26 Magnus Hagdorn
 * glide_stop.f90: output some runtime statistics to log
 * glimmer_temp.f90: optimise by reducing deep if clauses, avoiding
 divisions, etc

2005-01-22 Magnus Hagdorn
 * exponential temp parameterisation for eis_glide

2004-12-17 Magnus Hagdorn
 * isostasy.f90: moved lithosphere calculations to its own subroutine
	
2004-12-16 Magnus Hagdorn
 * combinded eis and EISMINT climate drivers in a new library: libclimate.a
 * eis_forcing.f90: cosmetic change
 * isostasy_setup.f90: radius of relative stiffness is calculated later, so output was random
 * ncdf_template.f90.in: fixed minor bugs/cosmetic changes
 * generate_ncvars.py: fixed problem when template file is in different directory
 * fixed some problems with build system
	
2004-12-15 Magnus Hagdorn
 * found and fixed a bug in glimmer_thck.f90

2004-12-13 Magnus Hagdorn
 * new isostasy code (isostasy.f90, isostasy_el.f90, isostasy_setup.f90, isostasy_types.f90, kelvin.f90)
 * removed old isostasy code (glimmer_isot.f90, glide.f90, glide_setup.f90, glide_types.f90)
 * hooked up new code (glide.f90, eis_glide.f90, glint_timestep.f90, simple_glide.f90, glide_vars.def, glimmer_thck.f90)
 * simple_forcing.f90: new climate options to set amplitude of time-dep ice sheet
 * glimmer_physcon.f90: cosmetic change
 * added some docs
	
2004-12-09 Magnus Hagdorn
 * fixed bug in Makefile

2004-12-09 Magnus Hagdorn
 new netCDF I/O subsystem
 * Makfile: updated to use new files
 * glimmer_ncdf.f90, glimmer_ncio.f90, glimmer_ncparms.f90: basic netCDF I/O system handling opening and closing of
   files, I/O time, parsing of configuration. This functionality can be used in other subsystems which require netCDF
   I/O
 * ncdf_template.f90.in: template for subsystem specific I/O functions, i.e. variable definition, writing, reading